--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,8 +24,16 @@
     font-size: 1.75rem;
     color: $dark-turquoise;
   }
+  .game-header-button-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media only screen and (max-width: 32rem) {
+      flex-direction: column;
+    }
+  }
   .game__button--enter {
-    margin-top: 2rem;
+    margin: 2rem .25rem 0 .25rem;
     font-size: 1.5rem;
     width: 9rem;
     height: 3rem;
